syntax = "proto3";

option csharp_namespace = "Client";

service Calling
{
	rpc CallService (CallReq) returns (CallResp);
}

message CallReq
{
	string caller_name = 1;
	int32 caller_id = 2;
}

message CallResp
{
	string receiver_name = 1;
	int32 receiver_id = 2;
}